# f1replaydash

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_dashboard.sh
.github/agents/: plan-compliance-reviewer.agent.md  project-builder.agent.md  project-orchestrator.agent.md  project-planner.agent.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: ExportPanel.tsx  MultiSessionTrend.tsx  PrecomputePanel.tsx  RaceEventFeed.tsx  RaceReplay.tsx  SessionLoader.tsx  StrategyPanel.tsx  TeamDriverComparison.tsx  TelemetryOverlay.tsx  TimingTower.tsx
frontend/src/types/: index.ts
frontend/src/views/: PracticeView.tsx  QualifyingView.tsx  RaceReplayView.tsx  RaceView.tsx
src/f1dash/: __init__.py  config.py  dashboard.py  main.py
src/f1dash.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/f1dash/api/: routes.py
src/f1dash/models/: schemas.py
src/f1dash/services/: __init__.py  cache_service.py  export_service.py  metrics_service.py  precompute_service.py  session_service.py
tests/: test_health.py
